fix mobile-collapse navbar and logo-link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@ nav.navbar .navbar-toggler {
 }
 nav .navbar-collapse {
   background: black;
+  z-index: 2;
 }
 nav .nav-link {
   color: white;
